--- a/Folder Monitor/Base.lproj/Main.storyboard
+++ b/Folder Monitor/Base.lproj/Main.storyboard
@@ -708,11 +708,11 @@
             <objects>
                 <viewController title="Main" id="XfG-lQ-9wD" customClass="ViewController" customModule="Folder_Monitor" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="620" height="307"/>
+                        <rect key="frame" x="0.0" y="0.0" width="555" height="324"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="OdP-IC-WqB">
-                                <rect key="frame" x="483" y="232" width="114" height="32"/>
+                                <rect key="frame" x="418" y="249" width="114" height="32"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="idA-DD-uSc"/>
                                 </constraints>
@@ -725,7 +725,7 @@
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" verticalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="bms-Hj-uoq">
-                                <rect key="frame" x="467" y="262" width="130" height="32"/>
+                                <rect key="frame" x="359" y="279" width="173" height="32"/>
                                 <buttonCell key="cell" type="push" title="Choose folder..." bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="nLy-1X-hgG">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
@@ -735,7 +735,7 @@
                                 </connections>
                             </button>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="fFb-Jj-L6W">
-                                <rect key="frame" x="28" y="271" width="44" height="16"/>
+                                <rect key="frame" x="28" y="288" width="44" height="16"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="Folder" id="p0n-ZA-0oF">
                                     <font key="font" metaFont="systemMedium" size="13"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -743,14 +743,14 @@
                                 </textFieldCell>
                             </textField>
                             <stackView distribution="fillProportionally" orientation="horizontal" alignment="top" spacing="5" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YMB-qL-TOZ" userLabel="Stack View Status">
-                                <rect key="frame" x="30" y="241" width="370" height="16"/>
+                                <rect key="frame" x="30" y="258" width="305" height="16"/>
                                 <subviews>
                                     <imageView verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7kM-6n-2BJ">
-                                        <rect key="frame" x="0.0" y="0.0" width="22" height="16"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="18" height="16"/>
                                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" image="Warning" id="vWz-zh-PSW"/>
                                     </imageView>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="2Mi-Hr-AaH">
-                                        <rect key="frame" x="25" y="0.0" width="347" height="16"/>
+                                        <rect key="frame" x="21" y="0.0" width="286" height="16"/>
                                         <textFieldCell key="cell" lineBreakMode="clipping" title="You haven't choose any folder to monitor" id="KWz-Gh-gFu">
                                             <font key="font" metaFont="system"/>
                                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -767,31 +767,39 @@
                                     <real value="3.4028234663852886e+38"/>
                                 </customSpacing>
                             </stackView>
-                            <box verticalHuggingPriority="750" fixedFrame="YES" boxType="separator" translatesAutoresizingMaskIntoConstraints="NO" id="Qpt-MH-Ehe">
-                                <rect key="frame" x="262" y="151" width="96" height="5"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            <box verticalHuggingPriority="750" boxType="separator" translatesAutoresizingMaskIntoConstraints="NO" id="Qpt-MH-Ehe">
+                                <rect key="frame" x="30" y="245" width="160" height="5"/>
                             </box>
-                            <stackView distribution="equalCentering" orientation="horizontal" alignment="bottom" spacing="40" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" translatesAutoresizingMaskIntoConstraints="NO" id="AXS-Qu-oii" userLabel="Stack View Print">
-                                <rect key="frame" x="30" y="200" width="560" height="21"/>
+                            <stackView distribution="fillProportionally" orientation="horizontal" alignment="bottom" spacing="20" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" translatesAutoresizingMaskIntoConstraints="NO" id="AXS-Qu-oii" userLabel="Stack View Print">
+                                <rect key="frame" x="30" y="217" width="320" height="21"/>
                                 <subviews>
-                                    <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="VcF-eh-Rt7">
-                                        <rect key="frame" x="0.0" y="0.0" width="470" height="21"/>
-                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="PDF's name to print" drawsBackground="YES" id="yb5-5W-Tz3">
+                                    <textField focusRingType="none" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="VcF-eh-Rt7">
+                                        <rect key="frame" x="0.0" y="0.0" width="200" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="200" id="QNf-fJ-Rnt"/>
+                                        </constraints>
+                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" focusRingType="none" placeholderString="PDF's name to print" drawsBackground="YES" id="yb5-5W-Tz3">
                                             <font key="font" metaFont="system"/>
                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
                                     </textField>
                                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Nc4-xm-iyB">
-                                        <rect key="frame" x="503" y="-7" width="64" height="32"/>
+                                        <rect key="frame" x="213" y="-7" width="114" height="32"/>
                                         <buttonCell key="cell" type="push" title="Print" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="KlA-JA-RMv">
                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                             <font key="font" metaFont="system"/>
                                         </buttonCell>
+                                        <connections>
+                                            <action selector="startPrinting:" target="XfG-lQ-9wD" id="EZA-LG-Myh"/>
+                                        </connections>
                                     </button>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="Nc4-xm-iyB" firstAttribute="width" secondItem="VcF-eh-Rt7" secondAttribute="width" multiplier="0.5" id="4Jk-Nb-TgV"/>
+                                </constraints>
                                 <visibilityPriorities>
-                                    <real value="1000"/>
+                                    <integer value="1000"/>
                                     <integer value="1000"/>
                                 </visibilityPriorities>
                                 <customSpacing>
@@ -800,7 +808,7 @@
                                 </customSpacing>
                             </stackView>
                             <textField horizontalHuggingPriority="249" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="LG0-av-GAj">
-                                <rect key="frame" x="75" y="269" width="383" height="21"/>
+                                <rect key="frame" x="75" y="286" width="275" height="21"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="Folder path appears here" drawsBackground="YES" id="w4L-y0-TW7">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
@@ -808,7 +816,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="t2v-Jc-y0r">
-                                <rect key="frame" x="28" y="169" width="34" height="16"/>
+                                <rect key="frame" x="28" y="186" width="34" height="16"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="Logs" id="tkz-cn-2wV">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -816,18 +824,18 @@
                                 </textFieldCell>
                             </textField>
                             <scrollView horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8IV-NM-HJG">
-                                <rect key="frame" x="30" y="20" width="560" height="144"/>
+                                <rect key="frame" x="30" y="20" width="495" height="161"/>
                                 <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="meg-T3-nhf">
-                                    <rect key="frame" x="1" y="1" width="543" height="142"/>
+                                    <rect key="frame" x="1" y="1" width="478" height="159"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <textView editable="NO" importsGraphics="NO" richText="NO" verticallyResizable="YES" spellingCorrection="YES" smartInsertDelete="YES" id="W5m-u9-pLe">
-                                            <rect key="frame" x="0.0" y="0.0" width="543" height="142"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="478" height="159"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                            <size key="minSize" width="543" height="142"/>
-                                            <size key="maxSize" width="595" height="10000000"/>
+                                            <size key="minSize" width="478" height="159"/>
+                                            <size key="maxSize" width="825" height="10000000"/>
                                             <attributedString key="textStorage">
                                                 <fragment content="Whenever you add PDFs, it will be logged here.">
                                                     <attributes>
@@ -846,7 +854,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                                 <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="zLN-rE-dZp">
-                                    <rect key="frame" x="544" y="1" width="15" height="142"/>
+                                    <rect key="frame" x="479" y="1" width="15" height="159"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                             </scrollView>
@@ -859,17 +867,20 @@
                             <constraint firstItem="t2v-Jc-y0r" firstAttribute="bottom" secondItem="8IV-NM-HJG" secondAttribute="top" constant="-5" id="AHf-FM-ZZj"/>
                             <constraint firstItem="YMB-qL-TOZ" firstAttribute="top" secondItem="fFb-Jj-L6W" secondAttribute="top" constant="30" id="As5-BO-6on"/>
                             <constraint firstItem="bms-Hj-uoq" firstAttribute="leading" secondItem="LG0-av-GAj" secondAttribute="trailing" constant="16" id="Brs-ho-Elo"/>
+                            <constraint firstItem="Qpt-MH-Ehe" firstAttribute="leading" secondItem="YMB-qL-TOZ" secondAttribute="leading" id="C5X-zs-79P"/>
                             <constraint firstItem="OdP-IC-WqB" firstAttribute="leading" secondItem="YMB-qL-TOZ" secondAttribute="trailing" constant="90" id="CNn-TZ-uEb"/>
                             <constraint firstItem="LG0-av-GAj" firstAttribute="centerY" secondItem="fFb-Jj-L6W" secondAttribute="centerY" id="EZw-Wg-uli"/>
                             <constraint firstItem="OdP-IC-WqB" firstAttribute="trailing" secondItem="bms-Hj-uoq" secondAttribute="trailing" id="EoS-ul-Pgz"/>
                             <constraint firstItem="8IV-NM-HJG" firstAttribute="trailing" secondItem="OdP-IC-WqB" secondAttribute="trailing" id="L5x-MG-aHh"/>
+                            <constraint firstItem="Qpt-MH-Ehe" firstAttribute="width" secondItem="AXS-Qu-oii" secondAttribute="width" multiplier="0.5" id="MdN-81-LRL"/>
                             <constraint firstItem="bms-Hj-uoq" firstAttribute="centerY" secondItem="LG0-av-GAj" secondAttribute="centerY" id="N4m-OU-Iub"/>
-                            <constraint firstItem="AXS-Qu-oii" firstAttribute="trailing" secondItem="OdP-IC-WqB" secondAttribute="trailing" id="QGi-C8-qCi"/>
+                            <constraint firstItem="AXS-Qu-oii" firstAttribute="trailing" secondItem="LG0-av-GAj" secondAttribute="trailing" id="QGi-C8-qCi"/>
                             <constraint firstItem="LG0-av-GAj" firstAttribute="leading" secondItem="fFb-Jj-L6W" secondAttribute="trailing" constant="5" id="SXG-px-EC3"/>
                             <constraint firstItem="AXS-Qu-oii" firstAttribute="top" secondItem="YMB-qL-TOZ" secondAttribute="bottom" constant="20" id="aEd-cm-z23"/>
                             <constraint firstItem="AXS-Qu-oii" firstAttribute="leading" secondItem="t2v-Jc-y0r" secondAttribute="leading" id="br2-dx-VcI"/>
                             <constraint firstItem="t2v-Jc-y0r" firstAttribute="leading" secondItem="YMB-qL-TOZ" secondAttribute="leading" id="iNX-87-bQP"/>
                             <constraint firstItem="fFb-Jj-L6W" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="20" symbolic="YES" id="qg2-kj-Ppu"/>
+                            <constraint firstItem="Qpt-MH-Ehe" firstAttribute="top" secondItem="YMB-qL-TOZ" secondAttribute="bottom" constant="10" id="ts3-Dl-OQ1"/>
                             <constraint firstItem="YMB-qL-TOZ" firstAttribute="leading" secondItem="fFb-Jj-L6W" secondAttribute="leading" id="vie-ea-Flc"/>
                             <constraint firstItem="fFb-Jj-L6W" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="30" id="xxE-5B-qZu"/>
                             <constraint firstAttribute="trailing" secondItem="bms-Hj-uoq" secondAttribute="trailing" constant="30" id="yYD-B3-uRw"/>
@@ -884,11 +895,12 @@
                         <outlet property="scrollView" destination="8IV-NM-HJG" id="tUQ-ea-IQB"/>
                         <outlet property="txtFolderPath" destination="LG0-av-GAj" id="ycj-u1-bHT"/>
                         <outlet property="txtLogs" destination="W5m-u9-pLe" id="q3a-7u-S38"/>
+                        <outlet property="txtPrint" destination="VcF-eh-Rt7" id="KQv-Dc-Znk"/>
                     </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="34" y="679.5"/>
+            <point key="canvasLocation" x="-107.5" y="688"/>
         </scene>
     </scenes>
     <resources>
