--- a/Folder Monitor/Base.lproj/Main.storyboard
+++ b/Folder Monitor/Base.lproj/Main.storyboard
@@ -789,6 +789,9 @@
                                         <buttonCell key="cell" type="push" title="Print" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="KlA-JA-RMv">
                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                             <font key="font" metaFont="system"/>
+                                            <string key="keyEquivalent" base64-UTF8="YES">
+DQ
+</string>
                                         </buttonCell>
                                         <connections>
                                             <action selector="startPrinting:" target="XfG-lQ-9wD" id="EZA-LG-Myh"/>
