--- a/Folder Monitor/Base.lproj/Main.storyboard
+++ b/Folder Monitor/Base.lproj/Main.storyboard
@@ -887,7 +887,7 @@ DQ
                                 </customSpacing>
                             </stackView>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="t2v-Jc-y0r">
-                                <rect key="frame" x="28" y="182" width="34" height="16"/>
+                                <rect key="frame" x="28" y="167" width="34" height="16"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="Logs" id="tkz-cn-2wV">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -895,17 +895,17 @@ DQ
                                 </textFieldCell>
                             </textField>
                             <scrollView horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8IV-NM-HJG">
-                                <rect key="frame" x="30" y="20" width="495" height="157"/>
+                                <rect key="frame" x="30" y="20" width="495" height="142"/>
                                 <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="meg-T3-nhf">
-                                    <rect key="frame" x="1" y="1" width="478" height="155"/>
+                                    <rect key="frame" x="1" y="1" width="478" height="140"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <textView editable="NO" importsGraphics="NO" richText="NO" verticallyResizable="YES" spellingCorrection="YES" smartInsertDelete="YES" id="W5m-u9-pLe">
-                                            <rect key="frame" x="0.0" y="0.0" width="478" height="155"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="478" height="140"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                            <size key="minSize" width="478" height="155"/>
+                                            <size key="minSize" width="478" height="140"/>
                                             <size key="maxSize" width="825" height="10000000"/>
                                             <attributedString key="textStorage">
                                                 <fragment content="Whenever you add PDFs, it will be logged here.">
@@ -925,7 +925,7 @@ DQ
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                                 <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="zLN-rE-dZp">
-                                    <rect key="frame" x="479" y="1" width="15" height="155"/>
+                                    <rect key="frame" x="479" y="1" width="15" height="140"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                             </scrollView>
@@ -933,7 +933,7 @@ DQ
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="8IV-NM-HJG" secondAttribute="bottom" constant="20" symbolic="YES" id="1Gx-EB-Hmk"/>
                             <constraint firstItem="8IV-NM-HJG" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="30" id="1MO-pj-ofl"/>
-                            <constraint firstItem="AXS-Qu-oii" firstAttribute="bottom" secondItem="t2v-Jc-y0r" secondAttribute="top" constant="-15" id="5cW-yV-yqH"/>
+                            <constraint firstItem="AXS-Qu-oii" firstAttribute="bottom" secondItem="t2v-Jc-y0r" secondAttribute="top" constant="-30" id="5cW-yV-yqH"/>
                             <constraint firstItem="YMB-qL-TOZ" firstAttribute="leading" secondItem="aeL-U2-WUE" secondAttribute="leading" id="6vP-4g-B5z"/>
                             <constraint firstItem="aeL-U2-WUE" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="17.5" id="98x-Vg-Ufj"/>
                             <constraint firstAttribute="trailing" secondItem="YMB-qL-TOZ" secondAttribute="trailing" constant="30" id="9jv-hE-tWh"/>
@@ -981,7 +981,83 @@ DQ
                     <font key="font" metaFont="systemSemibold" size="13"/>
                 </buttonCell>
             </objects>
-            <point key="canvasLocation" x="-107.5" y="688"/>
+            <point key="canvasLocation" x="-85" y="774"/>
+        </scene>
+        <!--Window Controller-->
+        <scene sceneID="5Zj-ql-Vp0">
+            <objects>
+                <windowController storyboardIdentifier="testwc" id="acG-wZ-Htf" customClass="TestWC" customModule="Folder_Monitor" customModuleProvider="target" sceneMemberID="viewController">
+                    <window key="window" title="Settings" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" id="c4Y-d7-7ph">
+                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
+                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
+                        <rect key="contentRect" x="294" y="313" width="480" height="270"/>
+                        <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1055"/>
+                        <view key="contentView" id="fnV-pj-Pxw">
+                            <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                        </view>
+                        <connections>
+                            <outlet property="delegate" destination="acG-wZ-Htf" id="V5k-zW-Pfr"/>
+                        </connections>
+                    </window>
+                    <connections>
+                        <segue destination="h3R-1k-0Sp" kind="relationship" relationship="window.shadowedContentViewController" id="hxL-BQ-JI6"/>
+                    </connections>
+                </windowController>
+                <customObject id="cxe-3k-gxY" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="515" y="754"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="eBd-ay-wW5">
+            <objects>
+                <viewController id="h3R-1k-0Sp" sceneMemberID="viewController">
+                    <view key="view" id="oBR-Gq-Z6U">
+                        <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0S5-JZ-o0U">
+                                <rect key="frame" x="131" y="125" width="219" height="19"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="I'm another window controller" id="KcU-hp-h5w">
+                                    <font key="font" metaFont="system" size="16"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                        </subviews>
+                    </view>
+                </viewController>
+                <customObject id="ZGn-gd-0Qy" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1222" y="723"/>
+        </scene>
+        <!--TestVC-->
+        <scene sceneID="fF4-GM-tnh">
+            <objects>
+                <viewController storyboardIdentifier="testvc" id="kpl-nL-5xI" customClass="TestVC" customModule="Folder_Monitor" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" id="xto-zC-tzG">
+                        <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="2xu-08-OJ6">
+                                <rect key="frame" x="127" y="141" width="197" height="19"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="I'm another view controller" id="zUI-Od-VMO">
+                                    <font key="font" metaFont="system" size="16"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="2xu-08-OJ6" firstAttribute="centerY" secondItem="xto-zC-tzG" secondAttribute="centerY" id="vFM-FM-s7B"/>
+                            <constraint firstItem="2xu-08-OJ6" firstAttribute="centerX" secondItem="xto-zC-tzG" secondAttribute="centerX" id="wxt-Pe-dRZ"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <customObject id="HKL-JR-5nq" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="360" y="1200"/>
         </scene>
     </scenes>
     <resources>
